--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@ Project: Milestone #1
 <title>Registration Form</title>
 </head>
 <body>
-	<form action="userRegistration.php" method="post">
+	<form action="registrationHandler.php" method="post">
         
 		<label for="firstName">First Name: </label>
 		<input type="text" name="firstName" id="firstName" placeholder="First Name" required/>
