(Milestone #3) - Added new blog page as well as php code for it.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Project: Milestone #2
 Description: index.html main landing page for blog site
 -->
 
-<html>
+<html lang="en">
 <head>
 <link rel="stylesheet" href="css/main.css">
 <meta charset="UTF-8">
@@ -20,5 +20,6 @@ Description: index.html main landing page for blog site
 	<h1>CST126 BLOG PROJECT</h1>
 	<a href="login.html">Login Page</a>
 	<a href="register.html">Registration Page</a>
+	<a href="newBlogPost.html">New Blog Post</a>
 </body>
 </html>
