--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@ Project: Milestone #2
 Description: html page with login form
 -->
 
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Login Page</title>
@@ -16,16 +16,22 @@ Description: html page with login form
 
 <body>
 <form action="loginHandler.php" method="post">
-		<label for="username">Username</label>
-		<input type="text" name="username" placeholder="Enter username">
-		<br>
-		<label for="password">Password</label>
-		<input type="password" name="password" placeholder="Enter password">
-		<br>
-		<input type="submit" value="Login">
-	</form>
+	<table>
+		<tr>
+			<td><label for="username">Username</label></td>
+			<td><input type="text" name="username" id="username" placeholder="Enter username"></td>
+		</tr>
+		<tr>
+			<td><label for="password">Password</label></td>
+			<td><input type="password" name="password" id="password" placeholder="Enter password"></td>
+		</tr>
+		<tr>
+			<td><input type="submit" value="Login"></td>
+		</tr>
+	</table>
+</form>
 	
-	<a href="index.html">Main Menu</a>
+<a href="index.html">Main Menu</a>
 	
 </body>
 </html>
