reformat code for entire project

--- a/newBlogPost.html
+++ b/newBlogPost.html
@@ -18,7 +18,8 @@
         </tr>
         <tr>
             <td><label for="blogContent">Blog Post</label></td>
-            <td><textarea name="blogContent" id="blogContent" placeholder="Enter you blog post here..." rows="10" cols="75"></textarea></td>
+            <td><textarea name="blogContent" id="blogContent" placeholder="Enter you blog post here..." rows="10"
+                          cols="75"></textarea></td>
         </tr>
         <tr>
             <td><input type="reset"></td>
