--- a/register.html
+++ b/register.html
@@ -31,7 +31,8 @@ Project: Milestone #1
         </tr>
         <tr>
             <td><label for="userPassword">Password: </label></td>
-            <td><input type="password" name="userPassword" id="userPassword" placeholder="Password (No real passwords. I don't hash/salt them)" required/></td>
+            <td><input type="password" name="userPassword" id="userPassword"
+                       placeholder="Password (No real passwords. I don't hash/salt them)" required/></td>
         </tr>
         <tr>
             <td><label for="dateOfBirth">Data of Birth</label></td>
