reformat all code (JetBrains PhpStorm style)

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@ Description: html page with login form
     </table>
 </form>
 
-<a href="index.html">Main Menu</a>
+<a href="index.php">Main Menu</a>
 
 </body>
 </html>
