--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@ Project: Milestone #1
     </table>
 </form>
 
-<a href="index.html">Main Menu</a>
+<a href="index.php">Main Menu</a>
 
 </body>
 </html>
